# submagic-mcp-server

./: .env.example  .gitignore  LICENSE  LOGO_REQUIREMENTS.md  MANIFEST.in  MARKETPLACE_PREPARATION_COMPLETE.md  PUBLISHING_GUIDE.md  README.md  READY_TO_PUBLISH.md  llms-install.md  pyproject.toml  requirements.txt  server.json  setup.py  submagic_mcp.py
assets/: CREATE_LOGO.md
docs/: API_LIMITATIONS_DISCOVERED.md  CLAUDE.md  CLEANUP_COMPLETE.md  MCP_REGISTRY_STATUS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PUBLISHED.md  STATUS.md  submagic-api.md
tests/: test_server.py
