[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "submagic-mcp-server"
version = "1.0.0"
description = "AI-powered video editing MCP server with Submagic API integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sid Dani", email = "sidart10@github.com"}
]
keywords = ["mcp", "model-context-protocol", "video-editing", "ai", "submagic", "captions", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sidart10/submagic-mcp-server"
Documentation = "https://github.com/sidart10/submagic-mcp-server#readme"
Repository = "https://github.com/sidart10/submagic-mcp-server"
Issues = "https://github.com/sidart10/submagic-mcp-server/issues"

[project.scripts]
submagic-mcp = "submagic_mcp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["submagic_mcp"]

